# Taxiapp_backend_rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml
src/: main.rs
